# Ferris-Aegis-The-operating-system-for-trustworthy-agents-

./: A2A_AND_RESILIENCE_SPEC.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DIAGRAMS.md  FINAL_STATUS.md  PHASE_4_HANDOFF.md  README.md  ROADMAP.md  SKILL-SPEC.md  SKILL_AEGIS_IMPLEMENTATION.md  SKILL_ECOSYSTEM_SUMMARY.md  SKILL_SPECIFICATION.md  SKILL_STANDARD_SPECIFICATION.md  SPECIFICATION.md
.agents/skills/aegis-agent-lifecycle/: SKILL.md
.agents/skills/aegis-crash-recovery/: SKILL.md
.agents/skills/aegis-crash-recovery/scripts/: validate-checkpoint.sh
.agents/skills/aegis-durable-workflow/: SKILL.md
.agents/skills/aegis-durable-workflow/references/: API.md
.agents/skills/aegis-mcp-server/: SKILL.md
.agents/skills/aegis-policy-authoring/: SKILL.md
.agents/skills/aegis-policy-authoring/assets/: policy-template.toml
.agents/skills/aegis-resilience-ops/: SKILL.md
.agents/skills/aegis-resilience-ops/references/: RESILIENCE-PATTERNS.md
.agents/skills/aegis-security-pipeline/: SKILL.md
.agents/skills/aegis-session-supervisor/: SKILL.md
.agents/skills/aegis-session-supervisor/references/: A2A-PROTOCOL.md
.agents/skills/aegis-skill-creator/: SKILL.md
.agents/skills/aegis-skill-creator/references/: SKILL-SPEC.md
.agents/skills/aegis-trust-kernel/: SKILL.md
.agents/skills/aegis-trust-kernel/references/: ARCHITECTURE.md
.github/ISSUE_TEMPLATE/: a2a-branch-a.md  cli-completion.md  daemon-mode.md  persistence-layer.md  wasm-plugin-integration.md
.well-known/agent-skills/: index.json
crates/a2a/: Cargo.toml
crates/a2a/src/: agent_card.rs  branch_a.rs  branch_b.rs  lib.rs  task.rs
crates/durable/: Cargo.toml
crates/durable/src/: lib.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: audit.rs  config.rs  guard.rs  health.rs  kernel.rs  lib.rs  policy.rs  sandbox.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  server.rs  tools.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs
crates/observability/: Cargo.toml  VERIFICATION.md
crates/observability/src/: lib.rs  metrics.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: lib.rs
crates/resilience/: Cargo.toml
crates/resilience/src/: lib.rs
crates/sandbox-wasm/: Cargo.toml
crates/sandbox-wasm/src/: lib.rs
crates/security/: Cargo.toml
crates/security/src/: allowlist.rs  injection.rs  lib.rs  ssrf.rs  vault.rs
crates/semantic-memory/: Cargo.toml
crates/semantic-memory/src/: lib.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs
crates/skills/: Cargo.toml
crates/skills/src/: error.rs  executor.rs  lib.rs  loader.rs  mcp_export.rs  registry.rs  types.rs  validator.rs
crates/supervisor/: Cargo.toml
crates/supervisor/src/: lib.rs
docs/: ARCHITECTURE-QUICK-REF.md  PHASE-DELIVERY-RECORD.md  TRACEABILITY.md
examples/: mcp-stdio.rs  sentinel.rs
policies/: default-safety.toml  sovereign.toml
skills/examples/: code-reviewer.md  manifest.json  research-planner.md  web-search.md
skills/examples/code-reviewer/: SKILL.md
skills/examples/research-planner/: SKILL.md
skills/examples/web-search/: SKILL.md
src/: agent.rs  lib.rs  main.rs
tests/: integration.rs
