[package]
name = "ferris-aegis-a2a"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Ferris Aegis — Agent-to-Agent protocol (Phase 4.5)"
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
schemars = { workspace = true }

[lints]
workspace = true
