[package]
name = "ferris-aegis-durable"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Ferris Aegis — Durable execution with checkpoint durability and crash recovery (Phase 5.1)"
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# SQLite persistence for checkpoints
sqlx = { workspace = true }

[lints]
workspace = true
