[package]
name = "ferris-aegis-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Ferris Aegis — Instrumented MCP stdio server (Phase 2 Week 4)"
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
rmcp = { workspace = true }
ferris-aegis-observability = { path = "../observability" }
