[package]
name = "ferris-aegis-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Ferris Aegis — Episodic memory with SQLite (Phase 3)"
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }

[lints]
workspace = true
