[package]
name = "ferris-aegis-observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Ferris Aegis — Observability crate: OTel tracing, Prometheus metrics, JSON stderr logging (Phase 2 Week 3)"
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
prometheus = { workspace = true }

[lints]
workspace = true
