[package]
name = "ferris-aegis-plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Ferris Aegis — Plugin system with Ed25519 manifest signing (Phase 3)"
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true
