[package]
name = "ferris-aegis-resilience"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Ferris Aegis — Resilience primitives: circuit breaker, retry, timeout, rate limiter (Phase 5)"
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }

[lints]
workspace = true
