[package]
name = "ferris-aegis-sandbox-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Ferris Aegis — WASM sandbox with fuel metering and memory caps (Phase 3)"
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasmtime = { workspace = true }

[lints]
workspace = true
