[package]
name = "ferris-aegis-security"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Ferris Aegis — Security policy engine, credential vault, injection scanner, SSRF guard (Phase 3)"
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
aes-gcm = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
