[package]
name = "ferris-aegis-semantic-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Ferris Aegis — Semantic memory with vector similarity search (Phase 4.3)"
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
