[package]
name = "ferris-aegis-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Ferris Aegis — Session management for agent conversations (Phase 4)"
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
