[package]
name = "ferris-aegis-skills"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Ferris Aegis — SKILL.md loader, validator, and executor for portable agent skills"
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }

# Markdown + YAML frontmatter parsing
markdown = "1"
yaml-rust2 = "0.9"

# Path canonicalization
camino = "1"

# Skill registry and caching
lru = "0.12"

# Dependency resolution
petgraph = "0.6"

# Signing and attestation
ed25519-dalek = { workspace = true }

# Integration with kernel
ferris-aegis-kernel = { path = "../kernel" }
ferris-aegis-observability = { path = "../observability" }
ferris-aegis-security = { path = "../security" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[lints]
workspace = true
